# plainmark

./: .gitattributes  .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/rules/: frontend.md  rust.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: SPEC.md  watcher-spike.md
docs/prompts/: phase-0-scaffold.md  phase-1-render.md  phase-2-graph.md  phase-3-daily.md  phase-4-tasks.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  config.rs  daily.rs  error.rs  fs_ops.rs  index.rs  main.rs  query.rs  watcher.rs
src/components/: BacklinksPanel.render.test.tsx  BacklinksPanel.tsx  Editor.tsx  FileTree.tsx  Mermaid.tsx  Preview.render.test.tsx  Preview.tsx  QueryBlock.test.tsx  QueryBlock.tsx  WikiLink.render.test.tsx  WikiLink.tsx
src/lib/: dailyNote.test.ts  dailyNote.ts  externalChange.test.ts  externalChange.ts  image.ts  path.test.ts  path.ts  tauri.daily.test.ts  tauri.query.test.ts  tauri.ts
src/lib/editor/: setup.ts  wikiComplete.test.ts  wikiComplete.ts
src/lib/links/: context.ts  resolve.test.ts  resolve.ts
src/lib/markdown/: remarkWikiEmbed.test.ts  remarkWikiEmbed.ts  remarkWikiLink.test.ts  remarkWikiLink.ts  resolveImage.test.ts  resolveImage.ts
src/lib/query/: context.ts
