[package]
name = "plainmark"
version = "0.0.0"
description = "A local-first, plain-Markdown notes app"
authors = ["plainmark contributors"]
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.77"

# The binary that boots the Tauri app.
[[bin]]
name = "plainmark"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[profile.release]
# Smaller, faster-to-ship binaries (SPEC §6: tiny binaries).
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
