[package]
name = "plainmark"
version = "0.0.0"
description = "A local-first, plain-Markdown notes app"
authors = ["plainmark contributors"]
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.77"

# The binary that boots the Tauri app.
[[bin]]
name = "plainmark"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
tauri-plugin-clipboard-manager = "2"
png = "0.18"
# Phase 2: filesystem watcher (native events + polling fallback) with built-in
# debouncing and rename-pair correlation (SPEC §13).
notify = "8"
notify-debouncer-full = "0.7"
# Phase 2: Markdown tokenization for the indexer — used to find heading and
# code-span/code-block ranges so wiki-link scanning skips fenced code.
pulldown-cmark = { version = "0.13", default-features = false }
# Phase 2: rebuildable index cache. `bundled` compiles SQLite from source — no
# system lib, no network, works in CI on all three OSes (SPEC §7).
rusqlite = { version = "0.40", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
# Smaller, faster-to-ship binaries (SPEC §6: tiny binaries).
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
